<resources>
    <string name="app_name">QuanLySinhVien</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_sigin">Đăng nhập</string>
    <string name="text_sigin_up">Đăng ký</string>
    <string name="text_1">Chưa có tài khoản ?</string>
    <string name="hint_signin">Tên đăng nhập</string>
    <string name="text_2">Password</string>
    <string name="btn_text1">Đăng ký</string>
    <string name="input_hint_text">Họ và Tên</string>
    <string name="Radio_btn_text">Nam</string>
    <string name="radio_btn_text2">Nữ</string>
    <string name="input_text2">Tên đăng nhập</string>
    <string name="textView">Password :</string>
    <string name="text_3">TextView</string>
    <string name="textview2">TextView</string>
    <string name="signUpBtn_text">Đăng ký</string>
    <string name="admin_btn_text1">Add Activity</string>
    <string name="admin_btn_text2">Manage</string>
    <string name="activity_row_name_text">TextView</string>
    <string name="activity_row_btn_text">Button</string>
    <string name="home_userbtn_text">Button</string>
    <string name="home_activityDetail_text1">TextView</string>
    <string name="home_activityDetail_text2">Lĩnh Vực:</string>
    <string name="home_activityDetail_text3">TextView</string>
    <string name="home_activityDetail_text4">Thời gian:</string>
    <string name="home_activityDetail_text5">TextView</string>
    <string name="home_activityDetail_text6">Số lượng:</string>
    <string name="home_activityDetail_text7">TextView</string>
    <string name="home_activityDetail_text8">Còn trống:</string>
    <string name="home_activityDetail_text9">TextView</string>
    <string name="home_activityDetail_text10">Yêu cầu:</string>
    <string name="home_activityDetail_text11">TextView</string>
    <string name="home_activityDetail_text12">Mô tả:</string>
    <string name="home_activityDetail_text13">TextView</string>
    <string name="home_activityDetail_btntext1">Đăng ký tham gia</string>
    <string name="StInfo_text1">THÔNG TIN SINH VIÊN</string>
    <string name="StInfo_text2">TextView</string>
    <string name="StInfo_text3">Giới tính:</string>
    <string name="StInfo_text4">TextView</string>
    <string name="StInfo_text5">Ngày sinh:</string>
    <string name="StInfo_text6">TextView</string>
    <string name="StInfo_text7">Điểm tích Lũy:</string>
    <string name="StInfo_text8">CÁC HOẠT ĐỘNG ĐÃ ĐĂNG KÝ</string>
    <string name="text_detail1">Số lượng đã đăng ký:</string>
    <string name="text_detail2">TextView</string>
    <string name="text_detail3">DANH SÁCH SINH VIÊN ĐÃ ĐĂNG KÝ</string>
    <string name="admin_add_hint_text1">Tên hoạt động</string>
    <string name="admin_add_hint_text2">Lĩnh vực</string>
    <string name="admin_add_hint_text3">Thời gian</string>
    <string name="admin_add_hint_text4">Số lượng</string>
    <string name="admin_add_hint_text5">Yêu cầu</string>
    <string name="admin_add_hint_text6">Mô tả</string>
    <string name="admin_add_btn_text1">Add Activity</string>
    <string name="admin_manage_text1">DANH SÁCH SINH VIÊN</string>
    <string name="home_text1">DANH SÁCH CÁC HOẠT ĐỘNG</string>
    <string name="admin_manage_detail_text1">TextView</string>
    <string name="admin_manage_detail_text2">Ngày sinh:</string>
    <string name="admin_manage_detail_text3">TextView</string>
    <string name="admin_manage_detail_text4">Giới tính:</string>
    <string name="admin_manage_detail_text5">TextView</string>
    <string name="admin_manage_detail_text6">DANH SÁCH CÁC HOẠT ĐỘNG ĐÃ ĐĂNG KÝ</string>
    <string name="admin_manage_detail_text7">Điểm tích lũy:</string>
</resources>
